force-app/main/default/objects/Hosts__c/Hosts__c.object-meta.xml
<CustomObject>
    <label>Host</label>
    <nameField>
        <label>Host</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Hosts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>