force-app/main/default/objects/Hosts__c/fields/Accessibility__c.field-meta.xml
<CustomField>
    <fullName>Accessibility__c</fullName>
    <inlineHelpText>Good - Wheelchair access
Medium - Stairs with 1-2 steps or similar
Bad - First floor, with no elevator</inlineHelpText>
    <label>Accessibility</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Good</fullName>
            </value>
            <value>
                <fullName>Medium</fullName>
            </value>
            <value>
                <fullName>Bad</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>