force-app/main/default/objects/Hosts__c/fields/Actual_cost__c.field-meta.xml
<CustomField>
    <fullName>Actual_cost__c</fullName>
    <label>Actual cost</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>