force-app/main/default/objects/Hosts__c/fields/Additional_Events__c.field-meta.xml
<CustomField>
    <fullName>Additional_Events__c</fullName>
    <label>Additional Events</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Value1</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>