force-app/main/default/objects/Hosts__c/fields/Adjusted_Expected_revenue_Excl_Vat__c.field-meta.xml
<CustomField>
    <fullName>Adjusted_Expected_revenue_Excl_Vat__c</fullName>
    <label>Adjusted Expected revenue Excl. Vat</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>