force-app/main/default/objects/Hosts__c/fields/Advertising_Protection__c.field-meta.xml
<CustomField>
    <fullName>Advertising_Protection__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Advertising Protection</label>
    <type>Checkbox</type>
</CustomField>