force-app/main/default/objects/Hosts__c/fields/Amenities__c.field-meta.xml
<CustomField>
    <fullName>Amenities__c</fullName>
    <label>Amenities</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Projector</fullName>
            </value>
            <value>
                <fullName>Projector screen</fullName>
            </value>
            <value>
                <fullName>Wi-Fi</fullName>
            </value>
            <value>
                <fullName>Microphone</fullName>
            </value>
            <value>
                <fullName>Power Cord Extender</fullName>
            </value>
            <value>
                <fullName>Aircondition</fullName>
            </value>
            <value>
                <fullName>Floor Heating</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>