force-app/main/default/objects/Hosts__c/fields/Availability_Checked_By__c.field-meta.xml
<CustomField>
    <fullName>Availability_Checked_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Availability Checked By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Hosts1</relationshipName>
    <type>Lookup</type>
</CustomField>