force-app/main/default/objects/Hosts__c/fields/Average_Booking_Percentage__c.field-meta.xml
<CustomField>
    <fullName>Average_Booking_Percentage__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Average Booking Percentage</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>