force-app/main/default/objects/Hosts__c/fields/Booking_Confirmation_Sent_At__c.field-meta.xml
<CustomField>
    <fullName>Booking_Confirmation_Sent_At__c</fullName>
    <label>Booking Confirmation Sent At</label>
    <type>DateTime</type>
</CustomField>