force-app/main/default/objects/Hosts__c/fields/Booking_Confirmation_Sent_To__c.field-meta.xml
<CustomField>
    <fullName>Booking_Confirmation_Sent_To__c</fullName>
    <label>Booking Confirmation Sent To</label>
    <type>Email</type>
</CustomField>