force-app/main/default/objects/Hosts__c/fields/Booking_Confirmation_Status__c.field-meta.xml
<CustomField>
    <fullName>Booking_Confirmation_Status__c</fullName>
    <label>Booking Confirmation Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Sent Draft</fullName>
            </value>
            <value>
                <fullName>Not sent</fullName>
            </value>
            <value>
                <fullName>Trigger</fullName>
            </value>
            <value>
                <fullName>Sent</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>