force-app/main/default/objects/Hosts__c/fields/Budgeted_cost_Excl_Vat__c.field-meta.xml
<CustomField>
    <fullName>Budgeted_cost_Excl_Vat__c</fullName>
    <label>Budgeted cost Excl. Vat</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>