force-app/main/default/objects/Hosts__c/fields/Campaign_Count_for_ROAS__c.field-meta.xml
<CustomField>
    <fullName>Campaign_Count_for_ROAS__c</fullName>
    <label>Campaign Count for ROAS</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>