force-app/main/default/objects/Hosts__c/fields/Campaign_Info_List__c.field-meta.xml
<CustomField>
    <fullName>Campaign_Info_List__c</fullName>
    <label>Campaign Info List</label>
    <length>13107</length>
    <type>Html</type>
</CustomField>