force-app/main/default/objects/Hosts__c/fields/Cancellation_Policy__c.field-meta.xml
<CustomField>
    <fullName>Cancellation_Policy__c</fullName>
    <label>Cancellation Policy</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>