force-app/main/default/objects/Hosts__c/fields/Catering_Type__c.field-meta.xml
<CustomField>
    <fullName>Catering_Type__c</fullName>
    <label>Catering Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
            </value>
            <value>
                <fullName>Drinks</fullName>
            </value>
            <value>
                <fullName>Light Snack</fullName>
            </value>
            <value>
                <fullName>Coffee</fullName>
            </value>
            <value>
                <fullName>Appetizer</fullName>
            </value>
            <value>
                <fullName>Full Meal</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>