force-app/main/default/objects/Hosts__c/fields/Company_Lecture_Booking_URL__c.field-meta.xml
<CustomField>
    <fullName>Company_Lecture_Booking_URL__c</fullName>
    <label>Company Lecture Booking URL</label>
    <length>2000</length>
    <type>Html</type>
</CustomField>