force-app/main/default/objects/Hosts__c/fields/Company_Type__c.field-meta.xml
<CustomField>
    <fullName>Company_Type__c</fullName>
    <label>Company Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Aktieselskab</fullName>
            </value>
            <value>
                <fullName>Andelsselskab (-forening) med begrænset ansvar</fullName>
            </value>
            <value>
                <fullName>Anpartsselskab</fullName>
            </value>
            <value>
                <fullName>Erhvervsdrivende fond</fullName>
            </value>
            <value>
                <fullName>Filial af udenlandsk aktieselskab, kommanditakties</fullName>
            </value>
            <value>
                <fullName>Folkekirkelige Institutioner</fullName>
            </value>
            <value>
                <fullName>Fonde og andre selvejende institutioner</fullName>
            </value>
            <value>
                <fullName>Forening</fullName>
            </value>
            <value>
                <fullName>Forening med begrænset ansvar</fullName>
            </value>
            <value>
                <fullName>Interessentskab</fullName>
            </value>
            <value>
                <fullName>Kommanditaktieselskab/Partnerselskab</fullName>
            </value>
            <value>
                <fullName>Statslig administrativ enhed</fullName>
            </value>
            <value>
                <fullName>Øvrige virksomhedsformer</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>