force-app/main/default/objects/Hosts__c/fields/Contact_Creator__c.field-meta.xml
<CustomField>
    <fullName>Contact_Creator__c</fullName>
    <label>Contact Creator</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Trigger</fullName>
            </value>
            <value>
                <fullName>Contact Created</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>