force-app/main/default/objects/Hosts__c/fields/Contact_First_Name__c.field-meta.xml
<CustomField>
    <fullName>Contact_First_Name__c</fullName>
    <formula>REVERSE(RIGHT(REVERSE( Name_of_Contact__c ),LEN(REVERSE(Name_of_Contact__c )) - FIND(&quot; &quot;,REVERSE(Name_of_Contact__c ))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contact First Name</label>
    <type>Text</type>
</CustomField>