force-app/main/default/objects/Hosts__c/fields/Contact_Last_Name__c.field-meta.xml
<CustomField>
    <fullName>Contact_Last_Name__c</fullName>
    <formula>IF(
    CONTAINS(Name_of_Contact__c, &quot; &quot;), 
    REVERSE(LEFT(REVERSE(Name_of_Contact__c), FIND(&quot; &quot;, REVERSE(Name_of_Contact__c)) - 1)),
    &quot;-&quot;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contact Last Name</label>
    <type>Text</type>
</CustomField>