force-app/main/default/objects/Hosts__c/fields/Contact_Person_Info__c.field-meta.xml
<CustomField>
    <fullName>Contact_Person_Info__c</fullName>
    <label>Contact Person Info</label>
    <type>TextArea</type>
</CustomField>