force-app/main/default/objects/Hosts__c/fields/Count_of_Working_Leads__c.field-meta.xml
<CustomField>
    <fullName>Count_of_Working_Leads__c</fullName>
    <label>Count of Working Leads</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>