force-app/main/default/objects/Hosts__c/fields/County__c.field-meta.xml
<CustomField>
    <fullName>County__c</fullName>
    <label>County (Deprecated)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>