force-app/main/default/objects/Hosts__c/fields/County_Denmark__c.field-meta.xml
<CustomField>
    <fullName>County_Denmark__c</fullName>
    <formula>IF(VALUE( Host_Address__PostalCode__s ) &lt;= 999, &quot;Specielle postnumre til organisationer og virksomheder med meget store mængder post&quot;, 
                    IF(VALUE(Host_Address__PostalCode__s ) &lt;= 3699, &quot;Sjælland&quot;, 
                        IF(VALUE(Host_Address__PostalCode__s ) &lt;= 3799, &quot;Bornholm&quot;, 
                            IF(VALUE(Host_Address__PostalCode__s ) &lt;= 3899, &quot;Oprindeligt Færøerne, men dér benyttes nu et selvstændigt tre-cifret system&quot;, 
                                IF(VALUE(Host_Address__PostalCode__s ) &lt;= 3999, &quot;Grønland&quot;, 
                                    IF(VALUE(Host_Address__PostalCode__s ) &lt;= 4999, &quot;Sjælland&quot;, 
                                        IF(VALUE(Host_Address__PostalCode__s ) &lt;= 5999, &quot;Fyn&quot;, 
                                                        IF(VALUE(Host_Address__PostalCode__s ) &lt;= 9999, &quot;Jylland&quot;, 
                                                            &quot;Unknown&quot;
                                                        )
                                    )
                    )
                )
            )
        )
    )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>County (Denmark)</label>
    <type>Text</type>
</CustomField>