force-app/main/default/objects/Hosts__c/fields/Date_of_First_Booking__c.field-meta.xml
<CustomField>
    <fullName>Date_of_First_Booking__c</fullName>
    <inlineHelpText>This field is set when the first booking happens with a Host. It is the Created Date of the first event on a Host - not related to the date of the actual event.</inlineHelpText>
    <label>Date of First Booking</label>
    <type>Date</type>
</CustomField>