force-app/main/default/objects/Hosts__c/fields/Date_of_First_Event__c.field-meta.xml
<CustomField>
    <fullName>Date_of_First_Event__c</fullName>
    <label>Date of First Event</label>
    <type>Date</type>
</CustomField>