force-app/main/default/objects/Hosts__c/fields/Date_of_Last_Event__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Last_Event__c</fullName>
    <label>Date of Last Event</label>
    <type>Date</type>
</CustomField>