force-app/main/default/objects/Hosts__c/fields/Date_of_Most_Recent_Booking__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Most_Recent_Booking__c</fullName>
    <label>Date of Most Recent Booking</label>
    <type>Date</type>
</CustomField>