force-app/main/default/objects/Hosts__c/fields/Default_Attendance_Format__c.field-meta.xml
<CustomField>
    <fullName>Default_Attendance_Format__c</fullName>
    <label>Default Attendance Format</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Physical</fullName>
                <default>true</default>
                <label>Physical</label>
            </value>
            <value>
                <fullName>Online</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>