force-app/main/default/objects/Hosts__c/fields/Default_Invoicing_Agreement__c.field-meta.xml
<CustomField>
    <fullName>Default_Invoicing_Agreement__c</fullName>
    <label>Default Invoicing Agreement</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Invoicing_Agreement</valueSetName>
    </valueSet>
</CustomField>