force-app/main/default/objects/Hosts__c/fields/Default_Max_Tickets_Per_Person__c.field-meta.xml
<CustomField>
    <fullName>Default_Max_Tickets_Per_Person__c</fullName>
    <defaultValue>2</defaultValue>
    <label>Default Max Tickets Per Person</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>