force-app/main/default/objects/Hosts__c/fields/Designated_Lecturer__c.field-meta.xml
<CustomField>
    <fullName>Designated_Lecturer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Designated Lecturer</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Designated_Hosts</relationshipName>
    <type>Lookup</type>
</CustomField>