force-app/main/default/objects/Hosts__c/fields/Dining_Duration__c.field-meta.xml
<CustomField>
    <fullName>Dining_Duration__c</fullName>
    <label>Dining Duration</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>15 minutes</fullName>
            </value>
            <value>
                <fullName>30 minutes</fullName>
            </value>
            <value>
                <fullName>45 minutes</fullName>
            </value>
            <value>
                <fullName>60 minutes</fullName>
            </value>
            <value>
                <fullName>75 minutes</fullName>
            </value>
            <value>
                <fullName>90 minutes</fullName>
            </value>
            <value>
                <fullName>105 minutes</fullName>
            </value>
            <value>
                <fullName>120 minutes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>