force-app/main/default/objects/Hosts__c/fields/Dynamic_Availability_Checker__c.field-meta.xml
<CustomField>
    <fullName>Dynamic_Availability_Checker__c</fullName>
    <label>Dynamic Availability Checker</label>
    <type>Date</type>
</CustomField>