force-app/main/default/objects/Hosts__c/fields/Email_Checker__c.field-meta.xml
<CustomField>
    <fullName>Email_Checker__c</fullName>
    <label>Email Checker</label>
    <length>50000</length>
    <type>Html</type>
</CustomField>