force-app/main/default/objects/Hosts__c/fields/Event_Counter__c.field-meta.xml
<CustomField>
    <fullName>Event_Counter__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Event Counter</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>