force-app/main/default/objects/Hosts__c/fields/Expected_revenue__c.field-meta.xml
<CustomField>
    <fullName>Expected_revenue__c</fullName>
    <label>Expected Revenue Incl. Vat</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>