force-app/main/default/objects/Hosts__c/fields/Expected_revenue_Excl_Vat__c.field-meta.xml
<CustomField>
    <fullName>Expected_revenue_Excl_Vat__c</fullName>
    <label>Expected revenue Excl. Vat</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>