force-app/main/default/objects/Hosts__c/fields/Food_Served__c.field-meta.xml
<CustomField>
    <fullName>Food_Served__c</fullName>
    <inlineHelpText>IMPORTANT: Whatever you write in this field, appears in the Event Name by default (You can manually remove it). Only use this field, if it is explicitily agreed that it should be a part of the Event Name. Write in brackets as (Food)</inlineHelpText>
    <label>Food Served</label>
    <length>100</length>
    <type>Text</type>
</CustomField>