force-app/main/default/objects/Hosts__c/fields/Generate_Draft_Without_Sending__c.field-meta.xml
<CustomField>
    <fullName>Generate_Draft_Without_Sending__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Generate Draft Without Sending</label>
    <type>Checkbox</type>
</CustomField>