force-app/main/default/objects/Hosts__c/fields/Host_ID__c.field-meta.xml
<CustomField>
    <fullName>Host_ID__c</fullName>
    <displayFormat>H-{0000000}</displayFormat>
    <externalId>true</externalId>
    <label>Host ID</label>
    <type>AutoNumber</type>
</CustomField>