force-app/main/default/objects/Hosts__c/fields/Industry__c.field-meta.xml
<CustomField>
    <fullName>Industry__c</fullName>
    <label>Industry</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Administration af og bidrag til erhvervsfremme</fullName>
            </value>
            <value>
                <fullName>Administration af sundhedsvæsen, undervisning, kultur og sociale forhold undtagen social sikring</fullName>
            </value>
            <value>
                <fullName>Aldersintegrerede institutioner</fullName>
            </value>
            <value>
                <fullName>Almennyttige boligselskaber</fullName>
            </value>
            <value>
                <fullName>Almindelig rengøring i bygninger</fullName>
            </value>
            <value>
                <fullName>Anden agenturhandel med føde-, drikke- og tobaksvarer</fullName>
            </value>
            <value>
                <fullName>Anden anlægsvirksomhed i.a.n.</fullName>
            </value>
            <value>
                <fullName>Anden bygge- og anlægsvirksomhed, som kræver specialisering</fullName>
            </value>
            <value>
                <fullName>Anden bygningsinstallationsvirksomhed</fullName>
            </value>
            <value>
                <fullName>Anden detailhandel med fødevarer i specialforretninger</fullName>
            </value>
            <value>
                <fullName>Anden forretningsservice i.a.n.</fullName>
            </value>
            <value>
                <fullName>Anden forskning og eksperimentel udvikling inden for naturvidenskab og teknik</fullName>
            </value>
            <value>
                <fullName>Anden it-servicevirksomhed</fullName>
            </value>
            <value>
                <fullName>Anden måling og teknisk analyse</fullName>
            </value>
            <value>
                <fullName>Anden personaleformidling</fullName>
            </value>
            <value>
                <fullName>Anden rengøring af bygninger og rengøring af erhvervslokaler</fullName>
            </value>
            <value>
                <fullName>Anden trykning</fullName>
            </value>
            <value>
                <fullName>Anden udgivelse af software</fullName>
            </value>
            <value>
                <fullName>Anden udgivervirksomhed</fullName>
            </value>
            <value>
                <fullName>Anden undervisning i.a.n.</fullName>
            </value>
            <value>
                <fullName>Andre former for institutionsophold</fullName>
            </value>
            <value>
                <fullName>Andre hjælpetjenester i forbindelse med finansiel formidling</fullName>
            </value>
            <value>
                <fullName>Andre hjælpetjenester i forbindelse med forsikring og pensionsforsikring</fullName>
            </value>
            <value>
                <fullName>Andre informationstjenester i.a.n.</fullName>
            </value>
            <value>
                <fullName>Andre liberale, videnskabelige og tekniske tjenesteydelser i.a.n.</fullName>
            </value>
            <value>
                <fullName>Andre organisationer og foreninger i.a.n.</fullName>
            </value>
            <value>
                <fullName>Andre post- og kurertjenester</fullName>
            </value>
            <value>
                <fullName>Andre rengøringsydelser</fullName>
            </value>
            <value>
                <fullName>Andre reservationstjenesteydelser og tjenesteydelser i forbindelse hermed</fullName>
            </value>
            <value>
                <fullName>Andre sociale foranstaltninger uden institutionsophold i.a.n.</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>