force-app/main/default/objects/Hosts__c/fields/Is_Using_Screen_Flow__c.field-meta.xml
<CustomField>
    <fullName>Is_Using_Screen_Flow__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field is checked automatically, the first time a booking is made on this host, using the Calendly Screenflow.</description>
    <label>Is Using Screen Flow</label>
    <type>Checkbox</type>
</CustomField>