force-app/main/default/objects/Hosts__c/fields/Last_contact__c.field-meta.xml
<CustomField>
    <fullName>Last_contact__c</fullName>
    <label>Last contact</label>
    <type>DateTime</type>
</CustomField>