force-app/main/default/objects/Hosts__c/fields/Lecture_Date_Proposal__c.field-meta.xml
<CustomField>
    <fullName>Lecture_Date_Proposal__c</fullName>
    <label>Lecture Date Proposal</label>
    <type>DateTime</type>
</CustomField>