force-app/main/default/objects/Hosts__c/fields/Lectures_in_Batch__c.field-meta.xml
<CustomField>
    <fullName>Lectures_in_Batch__c</fullName>
    <label>Lectures in Batch</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>