force-app/main/default/objects/Hosts__c/fields/Most_Recent_Call__c.field-meta.xml
<CustomField>
    <fullName>Most_Recent_Call__c</fullName>
    <label>Most Recent Call</label>
    <type>DateTime</type>
</CustomField>