force-app/main/default/objects/Hosts__c/fields/Most_Recent_Call_by__c.field-meta.xml
<CustomField>
    <fullName>Most_Recent_Call_by__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Most Recent Call by</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Hosts</relationshipName>
    <type>Lookup</type>
</CustomField>